--- a/Changes
+++ b/Changes
@@ -3,3 +3,5 @@ Revision history for File-Purge
 0.01    Date/time
         First version, released on an unsuspecting world.
 
+0.02    12 Aug 2008
+        Added documentation for regex paterns and a regex test
