--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-File-Purge
+File-Maintenance
 
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
@@ -25,21 +25,21 @@ SUPPORT AND DOCUMENTATION
 
 After installing, you can find documentation for this module with the perldoc command.
 
-    perldoc File::Purge
+    perldoc File::Maintenance
 
 You can also look for information at:
 
     Search CPAN
-        http://search.cpan.org/dist/File-Purge
+        http://search.cpan.org/dist/File-Maintenance
 
     CPAN Request Tracker:
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-Purge
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-Maintenance
 
     AnnoCPAN, annotated CPAN documentation:
-        http://annocpan.org/dist/File-Purge
+        http://annocpan.org/dist/File-Maintenance
 
     CPAN Ratings:
-        http://cpanratings.perl.org/d/File-Purge
+        http://cpanratings.perl.org/d/File-Maintenance
 
 COPYRIGHT AND LICENCE
 
